New structure & added content

--- a/src/assets/fonts/fontello-771c82e0/css/fontello-codes.css
+++ b/src/assets/fonts/fontello-771c82e0/css/fontello-codes.css
@@ -3,6 +3,7 @@
 .icon-twitter:before { content: '\f099'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
 .icon-rss:before { content: '\f09e'; } /* '' */
+.icon-codepen:before { content: '\f32c'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-github:before { content: '\f113'; } /* '' */
 .icon-stackoverflow:before { content: '\f16c'; } /* '' */
