--- a/src/components/Menu/style.scss
+++ b/src/components/Menu/style.scss
@@ -9,11 +9,11 @@
         margin: 0;
         &-item {
             padding: 0;
-            margin: 10px 0;
+            margin: 30px 0;
             &-link {
-                font-size: $typographic-base-font-size;
+                font-size: $typographic-base-font-size + 4;
                 color: $typographic-base-font-color;
-                font-weight: 400;
+                font-weight: 600;
                 border: 0;
                 &:hover,
                 &:focus {
@@ -24,6 +24,9 @@
                     color: $color-base;
                     border-bottom: 1px solid $color-base;
                 }
+            }
+            span {
+              font-weight: 400;
             }
         }
     }
