--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -6,10 +6,10 @@
     flex-basis: auto;
   }
 
-  &:hover {
-    -webkit-animation: bounce 1s;
-    animation: bounce 1s;
-  }
+  // &:hover {
+  //   -webkit-animation: bounce 2s;
+  //   animation: bounce 2s;
+  // }
   // border: 1px solid #d3d3d3;
   // border-radius: 10px 10px 10px;
   // &:hover {
