--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -13,7 +13,8 @@ $color-gray-border: lighten($color-base, 77%);
 $color-gray-bg: lighten($color-base, 79%);
 
 // Typographic
-$typographic-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+// $typographic-font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+$typographic-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 
 $typographic-root-font-size: 100;
 $typographic-base-font-size: 16px;
