--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -142,6 +142,12 @@ figcaption {
     text-align: center;
 }
 
+code {
+  background-color: #f5f2f0;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .layout {
     lost-center: $layout-width;
 }
