--- a/src/components/Project/style.scss
+++ b/src/components/Project/style.scss
@@ -6,6 +6,14 @@
     flex-basis: auto;
   }
 
+  transition: all 0.5s;
+
+  &:hover {
+    box-shadow: 3px 4px 26px 3px rgba(212, 212, 212, 0.925);
+    transform: translateY(-10px);
+    border-radius: 5px;
+  }
+
   // &:hover {
   //   -webkit-animation: bounce 2s;
   //   animation: bounce 2s;
