--- a/src/assets/fonts/fontello-98bf82a7/css/fontello.css
+++ b/src/assets/fonts/fontello-98bf82a7/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?65524428');
-  src: url('../font/fontello.eot?65524428#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?65524428') format('woff2'),
-       url('../font/fontello.woff?65524428') format('woff'),
-       url('../font/fontello.ttf?65524428') format('truetype'),
-       url('../font/fontello.svg?65524428#fontello') format('svg');
+  src: url('../font/fontello.eot?80445682');
+  src: url('../font/fontello.eot?80445682#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?80445682') format('woff2'),
+       url('../font/fontello.woff?80445682') format('woff'),
+       url('../font/fontello.ttf?80445682') format('truetype'),
+       url('../font/fontello.svg?80445682#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?65524428#fontello') format('svg');
+    src: url('../font/fontello.svg?80445682#fontello') format('svg');
   }
 }
 */
@@ -56,20 +56,9 @@
 }
  
 .icon-mail:before { content: '\e800'; } /* '' */
-.icon-twitter:before { content: '\f099'; } /* '' */
-.icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-rss:before { content: '\f09e'; } /* '' */
-.icon-codepen:before { content: '\f32c'; } /* '' */
+.icon-youtube:before { content: '\e801'; } /* '' */
+.icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-linkedin:before { content: '\f0e1'; } /* '' */
-.icon-github:before { content: '\f113'; } /* '' */
-.icon-stackoverflow:before { content: '\f16c'; } /* '' */
-.icon-instagram:before { content: '\f16d'; } /* '' */
-.icon-tumblr:before { content: '\f173'; } /* '' */
-.icon-dribbble:before { content: '\f17d'; } /* '' */
-.icon-skype:before { content: '\f17e'; } /* '' */
-.icon-vkontakte:before { content: '\f189'; } /* '' */
 .icon-slack:before { content: '\f198'; } /* '' */
-.icon-paper-plane:before { content: '\f1d8'; } /* '' */
-.icon-whatsapp:before { content: '\f232'; } /* '' */
-.icon-odnoklassniki:before { content: '\f263'; } /* '' */
+.icon-twitter-bird:before { content: '\f303'; } /* '' */
 .icon-codepen:before { content: '\f32c'; } /* '' */
