--- a/src/components/PostTemplateDetails/style.scss
+++ b/src/components/PostTemplateDetails/style.scss
@@ -12,8 +12,16 @@
         max-width: $layout-post-single-width;
         margin-left: auto;
         margin-right: auto;
-        font-weight: 600;
+        font-weight: bold;
         text-align: center;
+        background-image: linear-gradient(lighten(#2c2c2c, 10), #2c2c2c);
+        padding: 15px 0 10px 0;
+        color: #ffffff;
+        overflow: hidden;
+        -ms-transform: rotate(-2deg); /* IE 9 */
+        -webkit-transform: rotate(-2deg); /* Safari 3-8 */
+        transform: rotate(-2deg);
+        @include long-shadow(text, rgb(110, 110, 110), 100, false, false, left);
         @include line-height(1.65);
         @include margin-top(1);
         @include margin-bottom(0);
