--- a/src/templates/style.scss
+++ b/src/templates/style.scss
@@ -34,16 +34,55 @@ a {
   }
 }
 
+.blog-hero-image {
+  width: 100%;
+  margin: 40px -50px;
+  img {
+    max-width: 150%;
+  }
+}
+
+.blog-pagination {
+  display: flex;
+  display: -ms-flex;
+  display: -webkit-flex;
+  justify-content: space-between;
+  margin: 5em 0;
+  padding: 40px 0;
+  border-top: 1px solid #CCC;
+  border-bottom: 1px solid #CCC;
+  .left, .right {
+    text-align: center;
+    flex-grow: 1;
+    flex-basis: auto;
+    padding: 10px 25px;
+    margin: 0 20px;
+    transition: all 0.8s;
+    span {
+      text-transform: uppercase;
+      font-weight: 600;
+      display: block;
+    }
+    &:hover {
+      transform: translateY(-5px);
+      box-shadow: 0px 5px 18px 0px rgba(0, 0, 0, 0.3);
+    }
+  }
+  a span {
+    color: black;
+    &:hover {
+      color: black;
+    }
+  }
+  a:hover {
+    color: darkorange;
+  }
+}
+
 .floating-button {
-  // position: sticky;
   top: 20px;
   right: 20px;
-  // text-align: right;
   font-size: 1.7rem;
   margin-bottom: 20px;
-  // border-bottom: 5px solid #ccc;
-  // background: rgba(252,252,252, 0.9);
   width: fit-content;
-  // padding: 5px 10px 5px 10px;
-  // z-index: 2;
 }
