--- a/src/components/BlogUnit/style.scss
+++ b/src/components/BlogUnit/style.scss
@@ -11,7 +11,8 @@
       color: $link-color;
       text-decoration: none;
       &:hover {
-        text-decoration: underline;
+        text-decoration: none;
+        color: darkorange;
       }
     }
   }
