--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -8,6 +8,15 @@ $aside-width: 35%;
 
 .main {
   margin: 0 auto;
+
+  i.fa {
+    font-size: 2.2rem;
+    margin-right: 10px;
+  }
+
+  h4.subtitle {
+    color: darkslategrey;
+  }
   
   h3 {
     font-size: 3.4rem;
