--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,6 +1,19 @@
+@import '_variables.scss';
 @import '_colors.scss';
 @import '_mixins.scss';
+@import '_contact.scss';
+@import '_aside.scss';
+@import '_navigation.scss';
+@import '_images.scss';
+@import '_code.scss';
 
-body {
-  font-family: 'Chivo', 'Open Sans', 'sans-serif';
+a {
+  color: $link-color;
+  text-decoration: none;
+  font-weight: 600;
+  &:hover {
+    color: darkorange;
+    text-decoration: none;
+  }
+  transition: all 0.5s;
 }
