--- a/src/layouts/style.scss
+++ b/src/layouts/style.scss
@@ -1,12 +1,9 @@
 @import '~flexboxgrid';
 
-// Set box-sizing globally to handle padding and border widths
 *, *:after, *:before {
   box-sizing: inherit
 }
 
-// The base font-size is set at 62.5% for having the convenience
-// of sizing rems in a way that is similar to using px: 1.6rem = 16px
 html {
 	box-sizing: border-box;
   font-size: 62.5%;
@@ -14,14 +11,13 @@ html {
 
 body {
   margin: 0;
-  font-size: 1.6em; // Currently ems cause chrome bug misinterpreting rems on body element
+  font-size: 1.6em;
+  font-family: 'Chivo', 'Open Sans', 'sans-serif';
 	font-weight: 300;
 	letter-spacing: .01em;
   line-height: 1.6;
-  font-family: 'Open Sans', sans-serif;
 }
 
-// Typography
 h1, h2, h3, h4, h5, h6 {
   font-weight: 300;
 	letter-spacing: -.1rem;
@@ -40,7 +36,7 @@ h2 {
 }
 
 h3 {
-	font-size: 2.8rem;
+	font-size: 3.2rem;
   line-height: 1.3;
 }
 
@@ -48,6 +44,9 @@ h4 {
 	font-size: 2.2rem;
   letter-spacing: -.08rem;
   line-height: 1.35;
+  .subtitle {
+    color: darkslategrey;
+  }
 }
 
 h5 {
