--- a/src/templates/style.scss
+++ b/src/templates/style.scss
@@ -1,129 +1,14 @@
 @import '../assets/scss/main.scss';
 
-pre, code {
-  font-size: 1.5rem;
-  border-radius: 15px;
-}
-
-code {
-  padding: 3px 7px 3px 7px !important;
-}
-
-code.language-text {
-  background-color: #eee !important;
-  color: darkslategrey !important;
-}
-
-pre[class*="language-"] > code {
-  margin: -0.7rem;
-}
-
-a {
-  color: $link-color;
-  text-decoration: none;
-  font-weight: 600;
-  &:hover {
-    color: darkorange;
-    text-decoration: none;
-  }
-  transition: all 0.5s;
-}
-
-.mini-header {
-  display: flex;
-  display: -ms-flex;
-  display: -webkit-flex;
-  justify-content: space-between;
-  margin-bottom: 50px; 
-
-  .left, .right {
-    flex-grow: 1;
-    flex-basis: auto;
-  }
-  .left {
-    a {
-      color: black;
-    }
-  }
-  .right {
-    text-align: right;
-  }
-  span {
-    text-transform: uppercase;
-    font-weight: 600;
-  }
-}
-
 .blog-post-container {
   position: relative;
-}
-
-.blog-post {
-  h1.bold {
-    font-weight: 600;
-  }
 }
 
 .blog-post-content {
   font-size: 1.9rem;
   margin: 50px 0 100px 0;
-
   h2, h3, h4, h5 {
     margin-top: 70px;
-  }
-}
-
-.hero-image {
-  // width: 100% !important;
-  // margin: 40px 0 !important;
-  img {
-    // max-width: 100%;
-    z-index: 0;
-  }
-  p {
-    text-align: center;
-    font-size: 1.4rem;
-  }
-  // Setting the width and padding sizes
-  @include media('>=large') {
-    $main-width: 65%;
-    $main-margin-right: 35%;
-    $vertical-padding: 30px;
-    $horizontal-padding: 0;
-
-    width: $main-width;
-    margin-right: $main-margin-right; 
-    padding: $vertical-padding $horizontal-padding $vertical-padding $horizontal-padding;
-  }
-  @include media('>=medium', '<large') {
-    $main-width: 70%;
-    $main-margin-right: 30%;
-    $vertical-padding: 50px;
-    $horizontal-padding: 0;
-
-    width: $main-width;
-    margin-right: $main-margin-right; 
-    padding: $vertical-padding $horizontal-padding $vertical-padding $horizontal-padding;
-  }
-  @include media('>xsmall', '<medium') {
-    $main-width: 100%;
-    $main-margin-right: 0;
-    $vertical-padding: 50px;
-    $horizontal-padding: 0;
-
-    width: $main-width;
-    margin-right: $main-margin-right; 
-    padding: $vertical-padding $horizontal-padding 0 $horizontal-padding;
-  }
-  @include media('<=xsmall') {
-    $main-width: 100%;
-    $main-margin-right: 0;
-    $vertical-padding: 50px;
-    $horizontal-padding: 0;
-
-    width: $main-width;
-    margin-right: $main-margin-right; 
-    padding: $vertical-padding $horizontal-padding 0 $horizontal-padding;
   }
 }
 
@@ -147,14 +32,10 @@ a {
       display: block;
     }
     @include media('>xsmall', '<medium') {
-      h3 {
-        font-size: 1.7em;
-      }
+      h3 { font-size: 1.7em; }
     }
     @include media('<=xsmall') {
-      h3 {
-        font-size: 1.5em;
-      }
+      h3 { font-size: 1.5em; }
     }
   }
   a span {
@@ -165,6 +46,6 @@ a {
   }
 }
 
-.comments {
+section#comments {
   margin-bottom: 50px;
 }
