Fixed extended image CSS error

--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -1,7 +1,10 @@
 #contact-form {
+  margin: 30px 0;
+
   label {
     display: block;
     text-transform: uppercase;
+    font-weight: 600;
     font-size: 0.8em;
     letter-spacing: 2px;
     margin: 0 0 10px 0;
