--- a/src/assets/scss/_contact.scss
+++ b/src/assets/scss/_contact.scss
@@ -23,7 +23,7 @@
 		color: inherit;
 		display: block;
 		outline: 0;
-    padding: 0 1em;
+    padding: 0 20px;
     margin: 1em 0;
 		text-decoration: none;
     width: 100%;
@@ -70,10 +70,10 @@
 		display: inline-block;
 		font-size: 0.8em;
 		font-weight: 600;
-		height: 3.5em;
+		height: 50px;
 		letter-spacing: 2px;
 		line-height: 3.5em;
-		padding: 0 1.75em;
+		padding: 0 15px;
 		text-align: center;
 		text-decoration: none;
 		text-transform: uppercase;
@@ -81,20 +81,16 @@
   }
 
   input[type="submit"] {
-    border: 2px solid $link-color;
     background-color: $link-color;
     color: #fff;
     &:hover {
       background-color: darkorange;
-      border: 2px solid darkorange;
     }
   }
 
   input[type="reset"] {
-    border: 2px solid $link-color;
     color: $link-color;
     &:hover {
-      border-color: darkorange;
       color: darkorange;
     }
   }
