--- a/src/components/ExperienceUnit/style.scss
+++ b/src/components/ExperienceUnit/style.scss
@@ -17,6 +17,10 @@
       transform: translateY(-5px);
       box-shadow: 0px 5px 18px 0px rgba(0, 0, 0, 0.3);
     }
+
+    span {
+      display: none;
+    }
   }
   
   .title {
@@ -31,7 +35,7 @@
   }
 
   .subtitle {
-    color: $grey-color;
+    color: #333;
     font-size: 1.6rem;
     padding-bottom: 12px;
   }
