--- a/src/components/Navigation/style.scss
+++ b/src/components/Navigation/style.scss
@@ -1,38 +1,11 @@
 @import '../../assets/scss/main.scss';
 
-.side-button {
-  display: inline-block;
-  width: 5em;
-  height: 2.5em;
-  line-height: 2.5em;
-  cursor: pointer;
-  background: #fffce1;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  font-size: 0.8em;
-  font-weight: 800;
-
-  &.left {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-  }
-
-  &.right {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-
-  &.active {
-    background: #c94e50;
-    color: #fffce1;
-  }
-}
-
-.close-menu {
+.menu-close-button {
   font-size: 25px;
   height: 35px;
   line-height: 35px;
   text-align: right;
+  margin: 10px 20px;
   padding: 0 !important;
 }
 
@@ -42,6 +15,7 @@
   height: 30px;
   left: 50px;
   top: 55px;
+
   @include media('>=large') {
     left: 50px;
     top: 55px;
@@ -75,6 +49,7 @@
 
 .bm-menu {
   background: #232323;
+  width: 250px;
 
   a {
     color: darkgray;
@@ -84,110 +59,28 @@
       color: white;
     }
   }
+  
 }
 
-.bm-item-list a {
-  padding: 0.9em 1.5em;
-
-  span {
-    margin-left: 10px;
-    font-weight: 700;
-  }
-}
-
-.menu-item:hover {
-  background-color: #373a47;
-}
-
-.menu-1 {
-  .bm-cross {
-    background: #303138;
-  }
-
-  .bm-menu {
-    padding: 2.5em 1.5em 0;
-    font-size: 1.15em;
-  }
-}
-
-.menu-2 {
-  .bm-cross {
-    background: #999;
-  }
-
-  .bm-menu {
-    padding: 3.4em 1em 0;
-  }
-
+.bm-item-list {
+  
   a {
-    padding: 1em;
-  }
-
-  i {
-    font-size: 1.7em;
-    vertical-align: middle;
-    color: #282a35;
-  }
-}
-
-.menu-3 {
-  .bm-cross {
-    background: #888;
-  }
-
-  .bm-menu {
-    padding: 2em 1em;
-    font-size: 1.15em;
-  }
-
-  i {
-    opacity: 0.5;
-  }
-
-  span {
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-size: 0.75em;
-  }
-}
-
-.menu-4 {
-  .bm-cross {
-    background: #888;
-  }
-
-  h2 {
-    margin: 0 auto;
-    padding: 2em 1em;
-    color: rgba(0, 0, 0, 0.4);
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2);
-
-    i {
-      margin-left: 0.2em;
-    }
+    padding: 0.9em 1.5em;
 
     span {
-      font-size: 1.6em;
+      margin-left: 10px;
       font-weight: 700;
     }
   }
 
-  a {
-    padding: 1em;
-    text-transform: uppercase;
-    transition: background 0.3s, box-shadow 0.3s;
-    box-shadow: inset 0 -1px rgba(0, 0, 0, 0.2);
+  svg {
+    margin-right: 10px;
+  }
 
-    span {
-      letter-spacing: 1px;
-      font-weight: 400;
-    }
+}
 
-    &:hover,
-    &:focus {
-      background: rgba(0, 0, 0, 0.2);
-      box-shadow: inset 0 -1px rgba(0, 0, 0, 0);
-      color: #b8b7ad;
-    }
+.menu-item {
+  &:hover {
+    background-color: #373a47;
   }
 }
