--- a/src/assets/scss/_code.scss
+++ b/src/assets/scss/_code.scss
@@ -1,10 +1,9 @@
 pre, code {
   font-size: 1.5rem;
-  border-radius: 15px;
 }
 
 code {
-  padding: 3px 7px 3px 7px !important;
+  padding: 3px 7px !important;
 }
 
 code.language-text {
