--- a/src/components/ExperienceUnit/style.scss
+++ b/src/components/ExperienceUnit/style.scss
@@ -1,6 +1,8 @@
 @import '../../assets/scss/main.scss';
 
 .experience-unit {
+  margin-bottom: 20px;
+  
   .image {
     width: 100%;
     height: 130px;
@@ -26,6 +28,7 @@
   .title {
     padding: 8px 0px;
     font-size: 1.8rem;
+    font-weight: 400;
   }
 
   .time-period {
