--- a/src/components/Navigation/style.scss
+++ b/src/components/Navigation/style.scss
@@ -1,14 +1,5 @@
 @import '../../assets/scss/main.scss';
 
-.menu-close-button {
-  font-size: 25px;
-  height: 35px;
-  line-height: 35px;
-  text-align: right;
-  margin: 10px 20px;
-  padding: 0 !important;
-}
-
 .bm-burger-button {
   position: absolute;
   width: 30px;
@@ -50,6 +41,7 @@
 .bm-menu {
   background: #232323;
   width: 250px;
+  padding-top: 20px;
 
   a {
     color: darkgray;
@@ -58,29 +50,31 @@
     &:focus {
       color: white;
     }
-  }
-  
+  } 
 }
 
 .bm-item-list {
-  
   a {
     padding: 0.9em 1.5em;
-
-    span {
-      margin-left: 10px;
-      font-weight: 700;
-    }
   }
-
-  svg {
-    margin-right: 10px;
-  }
-
 }
 
 .menu-item {
-  &:hover {
-    background-color: #373a47;
+  span.name {
+    margin-left: 20px;
+    font-weight: 700;
   }
+
+  &:hover {
+    background-color: #2b2b2b;
+  }
+}
+
+.menu-close-button {
+  font-size: 25px;
+  height: 35px;
+  line-height: 35px;
+  text-align: right;
+  margin: 10px 20px;
+  padding: 0 !important;
 }
