--- a/src/components/Sidebar/About/style.scss
+++ b/src/components/Sidebar/About/style.scss
@@ -6,6 +6,10 @@ $margin-bottom: 40px;
 .about {
   color: $grey-color-light;
   
+  span {
+    display: none;
+  }
+  
   .image {
     width: 180px;
     max-width: $max-width;
