--- a/src/components/BlogUnit/style.scss
+++ b/src/components/BlogUnit/style.scss
@@ -5,12 +5,11 @@
   
   .title {
     padding: 8px 0px;
-    font-size: 3.0rem;
-    font-weight: 500;
-
+    
     a {
-      color: $link-color;
+      color: black;
       text-decoration: none;
+      font-weight: 400;
       &:hover {
         text-decoration: none;
         color: darkorange;
